Refactor code for clarity and maintainability
Simplify collection initializations with diamond operators and remove unnecessary parameters. Replace deprecated methods and improve conditional checks for cleaner code.